Clear Textare on Submit

--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,8 @@
               "Content-Type": "application/json",
             },
           });
+          
+          feedbackEl.value = "";
 
           alert("Thanks for submitting your feedback <3");
         } catch (error) {
